deploy/controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cozyplane-controller
  namespace: kube-system
  labels:
    app: cozyplane-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cozyplane-controller
  template:
    metadata:
      labels:
        app: cozyplane-controller
    spec:
      serviceAccountName: cozyplane-controller
      priorityClassName: system-cluster-critical
      containers:
        - name: controller
          image: ghcr.io/lllamnyp/cozyplane:dev
          imagePullPolicy: IfNotPresent
          command: ["/usr/local/bin/sdn-controller"]
          args:
            - --leader-elect=true
            - --metrics-bind-address=0
            - --health-probe-bind-address=:8081
            - --gateway-image=ghcr.io/lllamnyp/cozyplane:dev
            - --internal-cidrs=10.244.0.0/16,10.96.0.0/16,fd00:10:244::/56,fd00:10:96::/112
            - --cluster-dns=10.96.0.10
          livenessProbe:
            httpGet: { path: /healthz, port: 8081 }
            initialDelaySeconds: 10
          readinessProbe:
            httpGet: { path: /readyz, port: 8081 }
